# git-helper

./: Cargo.toml  flake.nix  rust-toolchain.toml  shell.nix
git-helper/src/config/profile/keys/: auth.rs  completion.rs  mod.rs  sign.rs
git-helper/src/config/profile/user/: signingkey.rs
nix/: default.nix  flake-compat.nix  package.nix  shell.nix
src/: main.rs
src/commands/: clone.rs  migrate.rs  mod.rs
src/commands/profile/: apply.rs  list.rs  mod.rs  remove.rs  upsert.rs
src/config/: clone_url.rs  mod.rs
src/config/profile/: alias.rs  mod.rs
src/config/profile/credential/: mod.rs  username.rs
src/config/profile/keys/: auth.rs  completion.rs  sign.rs
src/config/profile/user/: email.rs  mod.rs  name.rs  signingkey.rs
