[package]
name = "git-helper"
version = "0.3.0"
authors = ["NikSne <commits@niksne.ru>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.11"
dirs = "6.0"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
email_address = "0.2"
url = "2.5"
